=== Version 1.0.3
* Enhancements
  * Added support for the bold tag (Thanks sedx)
* Fixes
  * Fixed issue that allows access to elements on other indexed properties (Thanks Dane Andersen)
  * Removed the method to clear radio buttons.  It didn't work on selenium and threw an exception on watir. (Thanks Justin Ko)

=== Version 1.0.2 / 2014-7-21
* Enhancements
  * Added support to use multiple identifiers when locating nested frames / iframes (Thanks Justin Ko)
* Fixes
  * Reverted the method name check due to unintended consequences

=== Version 1.0.1 / 2014-7-19
* Enhancements
  * Checks the name of generated methods to ensure they do not colide with existing page-object methods
  * Removed old legacy css code and now delegate everything to Watir
* Fixes
  * Added support for dynamically finding elements inside iframes (Thanks Justin Ko)

=== Version 1.0 / 2014-6-1
* Enhancements
  * Better support for using Regexp
  * Added new page_url_value method that is created when you define page_url to return the value
  * Added better error message when nil is passed to the constructor of a PageObject
  * Updated to use the latest watir-webdriver 0.6.9
  * Updated to use the latest selenium-webdriver 2.42.0
* Fixes
  * Improved handling of index locator

=== Version 0.9.8 / 2014-3-16
* Enhancements
  * populate_page_with not supports radio groups

=== Version 0.9.7 / 2014-2-26
* Enhancements
  * Table now supports exists?
  * super called when factory method invoked with non PageObject class
  * Updated to use the latest watir-webdriver 0.6.8
  * Updated to use the latest selenium-webdriver 2.40.0

=== Version 0.9.6 / 2014-2-4
* Enhancements
  * Updated to use the latest watir-webdriver 0.6.7
* Fixes
  * Added in_iframe methods to match the updates to the watir-webdriver gem.

=== Version 0.9.5 / 2014-1-22
* Enhancements
  * Updated to use the latest selenium-webdriver 2.39.0
  * Added href method to Link
  * Added generation of plural version of basic types on class