@@ -20,8 +20,8 @@ module PageObject
       #
       # Set the framework to use.
       #
-      # @param[Symbol] the framework to use.  :jquery and :prototype
-      # are supported
+      # @param[Symbol] the framework to use.  :jquery, :prototype, :yui,
+      # and :angularjs are supported
       #
       def framework=(framework)
         initialize_script_builder unless @builder
