@@ -1,6 +1,7 @@
 === Version 1.0.3
 * Enhancements
   * Added support for the bold tag (Thanks sedx)
+  * Added support for angularjs in wait_for_ajax (Thanks Owen Housden)
 * Fixes
   * Fixed issue that allows access to elements on other indexed properties (Thanks Dane Andersen)
   * Removed the method to clear radio buttons.  It didn't work on selenium and threw an exception on watir. (Thanks Justin Ko)
